# GUI-APP-EEL

./: README.md  main.py  pyproject.toml  sample.csv
web/: index.html
web/css/: main.css
web/js/: main.js
